[gd_scene load_steps=3 format=3 uid="uid://ponirfa88bnm"]

[ext_resource type="Script" uid="uid://d1irkdahh4m54" path="res://Managers/notifManager.gd" id="1_cnduk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2ywr"]
bg_color = Color(1, 1, 0, 1)

[node name="NotifMessage" type="Control"]
z_index = 1
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cnduk")

[node name="NotifPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(475, 100)
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0

[node name="TextoNotif" type="RichTextLabel" parent="NotifPanel"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_n2ywr")
text = "Hola"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="NotifPanel"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="NotifPanel/Timer" to="." method="_on_timer_timeout"]
